# niagara

./: README.md  developmentidea.md
cpp/: .gitignore  CMakeLists.txt  README.md
cpp/include/: CommandLineParser.h  DataHub.h  RandomDataGenerator.h
cpp/src/: CommandLineParser.cpp  DataHub.cpp  RandomDataGenerator.cpp  main.cpp
golang/: README.md  go.mod  main.go  main_test.go  performance.go  random_data_generator.go
golang/static/: index.html
node-js/: package-lock.json  package.json  readme.md
node-js/src/: DataHub.js  RandomDataGenerator.js  flag-parser.js  ws.js
php/: DataHub.php  RandomDataGenerator.php  composer.json  readme.md  ws.php
